public enum TipoDeTurno {
    NORMAL,
    URGENTE
}