@startuml
'https://plantuml.com/class-diagram

class EmpresaXYZ{
    +emitirTurno(nombreCliente: String)
    +imprimirListaDeTurnos(:dia, mes, año)
    +cancelarTurno(numeroDeTurno)
    +verificarSiYaTieneTurno(Turno)

}
class Turno{
    -{static}MAX_TURNOS_DIA
    -numeroDeTurno: int
}
enum TipoDeTurno{
    NORMAL
    URGENT
}
class Fecha{
    -dia: int
    -mes: Mes
    -año: int
}
enum Mes{
    ENERO
    FEBRERO
    MARZO
    ABRIL
    MAYO
    JUNIO
    JULIO
    AGOSTO
    SEPTIEMBRE
    OCTUBRE
    NOVIEMBRE
    DICIEMBRE
}

EmpresaXYZ -->"*" Turno
Turno --> TipoDeTurno
Turno --> Fecha
Fecha -> Mes

@enduml